fix: getting alignments sorted back out for wide screen

--- a/site/src/styles/global.css
+++ b/site/src/styles/global.css
@@ -189,8 +189,8 @@ article blockquote {
    =============== */
 
     .wrapper {
-        width: 1026px; /* 1140px less 33% for right padding and 10% either side margin */
-        margin: 0 auto !important;
+        /** width: 1026px; /* 1140px less 33% for right padding and 10% either side margin */
+        /** margin: 0 auto !important; **/
     }
 
 }
