--- a/site/src/styles/theme.css
+++ b/site/src/styles/theme.css
@@ -45,7 +45,7 @@
 
     --gutter-small: 1rem;
     --gutter-medium: 2rem;
-    --gutter-large: 4rem;
+    --gutter-large: 3rem;
 
     --gutter: var(--gutter-small);
 
